<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:onClick="openCalculator"
            android:text="@string/CalcLauncher" />

        <!--Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/List_of_Entries" /-->
        <ScrollView
            android:id="@+id/scrollView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/button2"
            android:layout_above="@id/linearLayout">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/linear"
                android:paddingHorizontal="15dp">

            </LinearLayout>
        </ScrollView>
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            >
            <Button
                android:id="@+id/totalButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:text="@string/Total_water_consumed" />
            <Button
                android:id="@+id/averageButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Average_Per_Day"
                android:clickable="false"/>


        </LinearLayout>


    </RelativeLayout>

</android.support.constraint.ConstraintLayout>