<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Calculator">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/id1"
                    android:layout_width="236dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:text="@string/textview"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                <EditText
                    android:id="@+id/id2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/amountHint"
                    android:inputType="numberDecimal" />


            </LinearLayout>


            <!--Second Category -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <TextView
                    android:id="@+id/id3"
                    android:layout_width="169dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="16dp"
                    android:text="@string/secondcategory"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                <EditText
                    android:id="@+id/id4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/amountHint"
                    android:inputType="numberDecimal" />

            </LinearLayout>

            <!--Third Category android:inputType="numberDecimal"-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <TextView
                    android:id="@+id/id5"
                    android:layout_width="236dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:text="Hygiene"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                <EditText
                    android:id="@+id/id6"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/amountHint"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <!--Fourth Category -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">
                <!--4th Category -->
                <TextView
                    android:id="@+id/id7"
                    android:layout_width="236dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:text="@string/laundry_textview"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                <EditText
                    android:id="@+id/id8"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/amountHint"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <!--Fifth Category -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">
                <!--fifth Category -->

                <TextView
                    android:id="@+id/id9"
                    android:layout_width="236dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:text="Dishes"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                <EditText
                    android:id="@+id/id10"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/amountHint"
                    android:inputType="numberDecimal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/id11"
                    android:layout_width="236dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:text="Drinking"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                <EditText
                    android:id="@+id/id12"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/amountHint"
                    android:inputType="numberDecimal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/id13"
                    android:layout_width="236dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:text="@string/cooking_textview"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                <EditText
                    android:id="@+id/id14"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/amountHint"
                    android:inputType="numberDecimal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/id15"
                    android:layout_width="236dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:text="Cleaning"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                <EditText
                    android:id="@+id/id16"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/amountHint"
                    android:inputType="numberDecimal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="35dp"
                android:layout_weight="1"
                android:orientation="horizontal"

                >

                <TextView
                    android:id="@+id/id17"
                    android:layout_width="236dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:text="@string/Other_view"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                <EditText
                    android:id="@+id/editText9"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/amountHint"
                    android:inputType="textPersonName" />
            </LinearLayout>


        </LinearLayout>


    </ScrollView>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/scrollView2"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/SaveImageButton"
        android:onClick="onClick"
        android:scaleType="fitCenter"
        app:srcCompat="@android:drawable/ic_input_add" />
</RelativeLayout>